# handoff

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  devbox.json
.github/workflows/: release.yml
docs/: architecture.md  guide.md  reference.md  troubleshooting.md  worked-example.md
scripts/: set_cargo_version.py
src/: cli.rs  main.rs
src/commands/: archive.rs  clean.rs  completion.rs  confirm.rs  continue.rs  design.rs  export.rs  generate.rs  ignore.rs  init.rs  list.rs  mod.rs  next.rs  prompt.rs  prompt_output.rs  run.rs  spec.rs  start.rs  status.rs  switch.rs  tasks.rs  upgrade.rs  validate.rs  version.rs
src/core/: command_name.rs  config.rs  context.rs  feature.rs  mod.rs  paths.rs  state.rs  test_utils.rs  workflow.rs  workspace.rs
src/templates/: manager.rs  mod.rs  prompts.rs
templates/default/: default_context_prompt.md  default_continue_prompt.md  default_design.md  default_design_prompt.md  default_feature.md  default_generate_prompt.md  default_session.md  default_spec.md  default_spec_prompt.md  default_start_prompt.md  default_state.md  default_tasks_prompt.md
